--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>sTage</title>
 <!--	<link rel="stylesheet" href="css/grid.css">-->
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -38,7 +38,7 @@
 		<div class="main">
 			<div class="banner">
 				<video muted autoplay loop>
-					<source src="video/9convert.com - PRAGUE  Cinematic Travel Film  Sony a6400.mp4">
+					<source src="video/9convert.com - PRAGUE Cinematic Travel Film Sony a6400 (online-video-cutter.com)_1.mp4">
 				</video>
 				<div class="search">
 					<input type="text" name="search" placeholder="Where you want to go?">
